0.8.0 (2014-MM-DD)
==================

Backwards Incompatibilities
---------------------------

Bug Handling
------------

Features
--------

0.7.1 (2014-MM-DD)
==================

Bug Handling
------------
* Fixed load ordering of nested MultiDecoders (#1045)


0.7.0 (2014-08-27)
==================

Backwards Incompatibilities
---------------------------

* Switched to using fork of gomock, import location changed from
  `code.google.com/p/gomock` to `github.com/rafrombrc/gomock`.

* Move *GlobalConfigStruct out of pipeline package's global namespace, it is
  now stored as an attribute on PipelineConfig. Any code that used to call
  pipeline.Globals() now must instead access *PipelineConfig.Globals. The
  `WantsPipelineConfig` interface has been introduced to give plugins access
  to the active *PipelineConfig if it's needed in the ConfigStruct or Init
  methods (#951).

* Removed deprecated `pipeline.GetHekaConfigDir` API call, which has been
  replaced by `PrependBaseDir` and `PrependShareDir` for a few versions
  now.

* Removed the regular expression template support from the message matcher
  (issue #960).

* Updated the AMQP input / output configuration values to use underscore
  delimited words for long config options (issue #953).

Bug Handling
------------

* Fixed the MySQL slow query grammar to handle logs with no newline.

* Fixed packet tracking idle packs error output formatting.

* Prevent panics during shutdown when a restarting plugin has been restarted
  (issue #957).

* Added support for a Logstreamer symbolically linked log_directory root
  (issue #741).

* Fixed lots of race conditions in the tests.

* Eliminated race condition in use of global AMQPHub in AMQP input / output
  plugins (#953).

Features
--------

* Added StatMetric Influx Encoder.

* Added RstEncoder.

* Added support for '__ignore_root' tag in add_external_plugin to allow
  external packages to be added which do not have any .go files
  in their root directory (issue #955).
