@@ -218,6 +218,23 @@ Example hekad.toml file
 
 .. end-hekad-toml
 
+Using Environment Variables
+===========================
+
+If you wish to use environmental variables in your config files as a way to
+configure values, you can simply use ``$VARIABLE_NAME`` or ``${VARIABLE_NAME}``
+and the text will be replaced with the value of the environmental variable.
+
+Example:
+
+.. code-block:: ini
+
+    [AMQPInput]
+    url = "amqp://$USER:$PASSWORD@rabbitmq/"
+    exchange = "testout"
+    exchangeType = "fanout"
+
+
 .. start-restarting
 
 .. _configuring_restarting:
