@@ -20,6 +20,7 @@ import (
 	"code.google.com/p/go-uuid/uuid"
 	"fmt"
 	"github.com/bbangert/toml"
+	"io/ioutil"
 	"log"
 	"os"
 	"reflect"
@@ -814,7 +815,12 @@ const protobufEncoderToml = `
 func (self *PipelineConfig) LoadFromConfigFile(filename string) (err error) {
 	var configFile ConfigFile
 
-	if _, err = toml.DecodeFile(filename, &configFile); err != nil {
+	contents, err := ReplaceEnvsFile(filename)
+	if err != nil {
+		return err
+	}
+
+	if _, err = toml.Decode(contents, &configFile); err != nil {
 		return fmt.Errorf("Error decoding config file: %s", err)
 	}
 
@@ -959,4 +965,12 @@ func subsFromSection(section toml.Primitive) []string {
                 }
         }
         return subs
+}
+
+func ReplaceEnvsFile(path string) (string, error) {
+	contents, err := ioutil.ReadFile(path)
+	if err != nil {
+		return "", err
+	}
+	return os.ExpandEnv(string(contents)), nil
 }
