@@ -10,6 +10,8 @@ Bug Handling
 Features
 --------
 
+* Support environmental variables in config files (#1023)
+
 0.7.1 (2014-MM-DD)
 ==================
 
